mule-user-guide/v/3.7/logging.adoc
= 日志记录
:keywords: mule, studio, logger, logs, log, notifications, errors, debug

所有调试技术中不太高科技和最流行的是使用日志语句来跟踪应用程序状态的演变。在Mule中，您感兴趣的状态位于流经您的配置的消息中，可能还包含自定义代码。

如果您从Anypoint Studio运行Mule配置，则日志输出在Anypoint Studio的控制台窗口中可见。如果您从命令行运行Mule，则日志在OS控制台中可见。

Mule的独立日志配置存储在<Mule Installation Directory> / conf / log4j2.xml中：如果需要更改日志输出的详细程度，请编辑此文件。

*Note*：如果您使用的是Anypoint Studio，则日志输出将出现在Studio工作区的`.mule`目录中。
例如，在Mac上，对于名为`Basic Tutorial`的应用程序，日志输出位于此文件中：

[source,code]
----
/Users/me/AnypointStudio/workspace/.mule/logs/basic_tutorial.log
----

日志组件是记录机上消息有效载荷的快捷方式。将其添加到您想要探测消息的消息流中的任何位置：

[source, xml, linenums]
----
<flow name="FlowWithLoggers">
  <http:listener config-ref="HTTP_Listener_Configuration1" path="hello" doc:name="HTTP"/>
  <logger level="INFO" doc:name="Logger-before"/>
  <base64-encoder-transformer/>
  <logger level="INFO" doc:name="Logger-after"/>
  <vm:outbound-endpoint path="next.in.line" />
</flow>
----

如果您需要有关该消息的更多详细信息，则可以使用如下所示的简单脚本化日志记录组件：

[source, xml, linenums]
----
<scripting:script name="Logger" engine="groovy">
  <scripting:text>log.info(message); log.info(payload); message</scripting:text>
</scripting:script>
----

你可以从你的流程中的任何地方引用它：

[source, xml, linenums]
----
<flow name="FlowWithLoggers">
  <http:listener config-ref="HTTP_Listener_Configuration1" path="hello" doc:name="HTTP"/>
  <scripting:component script-ref="Logger" />
  <base64-encoder-transformer/>
  <scripting:component script-ref="Logger" />
  <vm:outbound-endpoint path="next.in.line" />
</flow>
----

有关如何在Studio中使用记录器组件的更多信息，请参阅 link:/mule-user-guide/v/3.7/logger-component-reference[记录器组件参考]

您可以配置记录的内容，记录的位置以及如何编辑位于项目中的配置文件。有关您可以通过此操作以及如何设置的说明的说明，请参阅 link:/mule-user-guide/v/3.7/logging-in-mule[登录Mule]。

