mule-user-guide/v/3.8/logging.adoc
= 日志记录
:keywords: mule, studio, logger, logs, log, notifications, errors, debug

所有调试技术中不太高科技和最流行的方法是使用日志语句来跟踪应用程序状态的演变。在Mule中，您感兴趣的状态位于流经您的配置的消息中，可能还包含自定义代码。

如果您从Anypoint Studio运行Mule配置，则日志输出在Anypoint Studio的控制台窗口中可见。如果您从命令行运行Mule，则日志在OS控制台中可见。

Mule的独立日志配置存储在<Mule Installation Directory> / conf / log4j2.xml中：如果需要更改日志输出的详细程度，请编辑此文件。

*Note*：如果您使用的是Anypoint Studio，则日志输出将出现在Studio工作区的`.mule`目录中。
例如，在Mac上，对于名为`Basic Tutorial`的应用程序，日志输出位于此文件中：

[source]
----
/Users/me/AnypointStudio/workspace/.mule/logs/basic_tutorial.log
----

== 记录器组件

记录器组件是记录机上消息有效载荷的快捷方式。将其添加到您想要探测消息的消息流中的任何位置：

[source, xml, linenums]
----
<flow name="FlowWithLoggers">
  <http:listener config-ref="HTTP_Listener_Configuration1" path="/hello" doc:name="HTTP"/>
  <logger level="INFO" message="Payload received from HTTP: #[payload]" doc:name="Logger-before"/>
  <base64-encoder-transformer/>
  <logger level="INFO" message="Payload after base64: #[payload]" doc:name="Logger-after"/>
  <vm:outbound-endpoint path="next.in.line" />
</flow>
----

== 默认行为

如果消息字段中没有指定，记录器会记录整个Mule消息，包括所有会话，入站和出站属性以及流量变量。由于显示所有内容的内容可能非常冗长，有效负载的内容不会显示，只显示其类型。

[source, xml, linenums]
----
<flow name="FlowWithEmptyLogger">
  <http:listener config-ref="HTTP_Listener_Configuration" path="/test" doc:name="HTTP"/>
  <logger level="INFO" doc:name="Log message"/>
</flow>
----

== 最佳实践 - 区分实例

如果某个流程使用多个记录器，请在记录器的消息中添加一些固定文本以确定它的基因处理位置：

[source, xml, linenums]
----
<flow name="FlowWithLoggers">
  <http:listener config-ref="HTTP_Listener_Configuration1" path="/hello" doc:name="HTTP"/>
  <logger level="INFO" message="Message before base64: #[message]" doc:name="Log message before"/>
  <base64-encoder-transformer/>
  <logger level="INFO" message="Message after base64: #[message]" doc:name="Log message after"/>
  <vm:outbound-endpoint path="next.in.line" />
</flow>
----

== 使用脚本组件作为记录器

如果您需要有关该消息的更多详细信息，则可以使用如下所示的简单脚本化日志记录组件：

[source, xml, linenums]
----
<scripting:script name="Logger" engine="groovy">
  <scripting:text>log.info(message); log.info(payload); message</scripting:text>
</scripting:script>
----

您可以使用您提供的名称在您的流程中的任何位置引用脚本组件，在这种情况下"Logger"：

[source, xml, linenums]
----
<flow name="FlowWithLoggers">
  <http:listener config-ref="HTTP_Listener_Configuration1" path="hello" doc:name="HTTP"/>
  <scripting:component script-ref="Logger" />
  <base64-encoder-transformer/>
  <scripting:component script-ref="Logger" />
  <vm:outbound-endpoint path="next.in.line" />
</flow>
----

== 编辑Mule记录配置

您可以配置记录的内容，记录的位置以及如何通过编辑Studio项目或独立Mule服务器的`$MULE_HOME`目录中的文件夹中的配置文件。有关如何修改文件的说明，请参阅 link:/mule-user-guide/v/3.8/logging-in-mule[登录Mule]。

== 另请参阅

* 有关如何在Studio中使用记录器组件的更多信息，请参阅 link:/mule-user-guide/v/3.8/logger-component-reference[记录器组件参考]




